--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
     <div class="header">
@@ -16,7 +16,9 @@
     <div class="main-container">
         
         <div class="intro-container">
-            <!--Intro goes here-->
+            <h1 class="intro">This website is awesome</h1>
+            <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <a class="intro-button" href="#">Sign up</a>
         </div>
 
         <div class="info-container">
