Separate intro text from intro img

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <div class="main-container">
         
         <div class="intro-container">
-            <h1 class="intro">This website is awesome</h1>
-            <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <a class="intro-button" href="#">Sign up</a>
+            <div class="intro-main">
+                <h1 class="intro">This website is awesome</h1>
+                <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <a class="intro-button" href="#">Sign up</a>
+            </div>
         </div>
 
         <div class="info-container">
