Add intro placeholder image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <a class="intro-button" href="#">Sign up</a>
             </div>
+            <img src="placeholder.jpg" alt="placeholder">
         </div>
 
         <div class="info-container">
