Add heading for info section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </div>
 
         <div class="info-container">
-            <!--Info goes here-->
+            <h2 class="info-heading">Some random information.</h2>
+            <img src="placeholder.jpg" alt="placeholder">
+            <p></p>
         </div>
 
         <div class="quote-container">
