Create info picture container div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
 
         <div class="info-container">
             <h2 class="info-heading">Some random information.</h2>
-            <img src="placeholder.jpg" alt="placeholder">
+
+            <div class="info-pic-container">
+                <img src="placeholder.jpg" alt="placeholder">
+                <p class="info-description">this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="info-pic-container">
+                <img src="placeholder.jpg" alt="placeholder">
+                <p class="info-description">this is some subtext under an illustration or image</p>
+            </div>
+            
+            <div class="info-pic-container">
+                <img src="placeholder.jpg" alt="placeholder">
+                <p class="info-description">this is some subtext under an illustration or image</p>
+            </div>
+    
+            <div class="info-pic-container">
+                <img src="placeholder.jpg" alt="placeholder">
+                <p class="info-description">this is some subtext under an illustration or image</p>
+            </div>
+
             <p></p>
         </div>
 
