Create quote main container and quote content

--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
                 </div>
                 
             </div>
-            
+
         </div>
 
         <!--Contains quote section of page-->
         <div class="quote-container">
-            <!--Quote goes here-->
+
+            <div class="quote-main">
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-src">-Thor, God of Thunder</p>
+            </div>
         </div>
 
         <!--Contains call-to-action section of page-->
