--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!--Contains quote section of page-->
         <div class="quote-container">
 
-            <div class="quote-main">
+            <div class="quote">
                 <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="quote-src">-Thor, God of Thunder</p>
             </div>
@@ -72,7 +72,13 @@
 
         <!--Contains call-to-action section of page-->
         <div class="cta-container">
-            <!--CTA goes here-->
+            <div class="cta">
+                <div class="cta-text">
+                    <p class="cta-heading">Call to action! It's time!</p>
+                    <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <a href="#">Sign up</a>
+            </div>
         </div>
     </div>
 
