Add footer text

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!--Contains footer of page-->
     <div class="footer">
-        <!--Footer goes here-->
+        <p>Copyright © The Odin Project. 2023</p>
     </div>
     
 </body>
