--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <!--Header of the page-->
     <div class="header">
         <p>Header Logo</p>
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
+
+        <!--Contains header links-->
+        <div class="header-links">
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </div>
     </div>
 
     <!--Divide page into four sections-->
