Include sign up button and change padding for intro section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="intro-main">
                 <h1 class="intro">This website is awesome</h1>
-                <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <p class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <a class="intro-button" href="#">Sign up</a>
             </div>
 
