Revamp call to action UI and created a button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="cta-heading">Call to action! It's time!</p>
                     <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <a href="#">Sign up</a>
+                <a class="cta-button" href="#">Sign up</a>
             </div>
         </div>
     </div>
