Added change background on hover button on navbar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <!--Header of the page-->
     <div class="header">
-        <p>Header Logo</p>
+        Header Logo
 
         <!--Contains header links-->
         <div class="header-links">
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <a href="#"><div>header link one</div></a>
+            <a href="#"><div>header link two</div></a>
+            <a href="#"><div>header link three</div></a>
         </div>
     </div>
 
