Include banner tagline, banner description, and team section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Baby Blue Pharma</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -28,8 +28,8 @@
 
             <div class="intro-main">
                 <div class="intro-text">
-                    <div class="intro">This website is awesome</div>
-                    <div class="intro-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <div class="intro">Purity. Knocking on your door.</div>
+                    <div class="intro-description">Chemistry meets compassion in our company, situated in the heart of Albuquerque, New Mexico. Our team aims to leave a lasting impact on healthcare, one blue crystal at a time.</div>
                     <a class="intro-button" href="#">Sign up</a>
                 </div>
 
@@ -42,7 +42,7 @@
         <div class="info-container">
 
             <div class="info-main">
-                <div class="info-heading">Some random information.</div>
+                <div class="info-heading">Meet our team.</div>
 
                 <div class="info-pic-container">
 
@@ -50,6 +50,7 @@
                         <div class="info-img">
                             <img src="placeholder.png" alt="placeholder">
                         </div>
+                        <div class="member-name">Walter White</div>
                         <div class="info-description">this is some subtext under an illustration or image</div>
                     </div>
 
@@ -57,6 +58,7 @@
                         <div class="info-img">
                             <img src="placeholder.png" alt="placeholder">
                         </div>
+                        <div class="member-name">Jesse Pinkman</div>
                         <div class="info-description">this is some subtext under an illustration or image</div>
                     </div>
             
@@ -64,6 +66,7 @@
                         <div class="info-img">
                             <img src="placeholder.png" alt="placeholder">
                         </div>
+                        <div class="member-name">Saul Goodman, Esq.</div>
                         <div class="info-description">this is some subtext under an illustration or image</div>
                     </div>
 
@@ -71,7 +74,17 @@
                         <div class="info-img">
                             <img src="placeholder.png   " alt="placeholder">
                         </div>
+                        <div class="member-name">Gustavo Fring</div>
                         <div class="info-description">this is some subtext under an illustration or image</div>
+                    </div>
+
+                    <div class="pic-container">
+                        <div class="info-img">
+                            <img src="placeholder.png" alt="placeholder">
+                        </div>
+                        <div class="member-name">Mike Ehrmantraut</div>
+                        <div class="info-description">this is some subtext under an illustration or image</div>
+                    </div>
                     </div>
                 
                 </div>
