Organize team member pictures and upload member pictures to website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="placeholder.png" alt="placeholder">
+                            <img src="./pictures/walter-white.png" alt="placeholder">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Walter White</div>
@@ -58,7 +58,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="placeholder.png" alt="placeholder">
+                            <img src="./pictures/jesse-pinkman.png" alt="placeholder">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Jesse Pinkman</div>
@@ -68,7 +68,7 @@
             
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="placeholder.png" alt="placeholder">
+                            <img src="./pictures/saul-goodman.jpg">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Saul Goodman, Esq.</div>
@@ -78,7 +78,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="placeholder.png" alt="placeholder">
+                            <img src="./pictures/gus-fring.jpg" alt="placeholder">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Gustavo Fring</div>
@@ -88,7 +88,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="placeholder.png" alt="placeholder">
+                            <img src="./pictures/mike.jpeg" alt="placeholder">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Mike Ehrmantraut</div>
