Uploaded new pictures for Saul and Gus

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/saul-goodman.jpg">
+                            <img src="./pictures/saul-goodman.webp">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Saul Goodman, Esq.</div>
@@ -78,7 +78,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/gus-fring.jpg" alt="placeholder">
+                            <img src="./pictures/gus-fring.webp" alt="placeholder">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Gustavo Fring</div>
