Added member positions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="member-text">
                             <div class="member-name">Walter White</div>
-                            <div class="member-description">this is some subtext under an illustration or image</div>
+                            <div class="member-description">Chief Executive Officer</div>
                         </div>
                     </div>
 
@@ -62,7 +62,7 @@
                         </div>
                         <div class="member-text">
                             <div class="member-name">Jesse Pinkman</div>
-                            <div class="member-description">this is some subtext under an illustration or image</div>
+                            <div class="member-description">Head of Marketing</div>
                         </div>
                     </div>
             
@@ -72,7 +72,7 @@
                         </div>
                         <div class="member-text">
                             <div class="member-name">Saul Goodman, Esq.</div>
-                            <div class="member-description">this is some subtext under an illustration or image</div>
+                            <div class="member-description">General Counsel</div>
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
                         </div>
                         <div class="member-text">
                             <div class="member-name">Gustavo Fring</div>
-                            <div class="member-description">this is some subtext under an illustration or image</div>
+                            <div class="member-description">Chief Operations Officer</div>
                         </div>
                     </div>
 
@@ -92,7 +92,7 @@
                         </div>
                         <div class="member-text">
                             <div class="member-name">Mike Ehrmantraut</div>
-                            <div class="member-description">this is some subtext under an illustration or image</div>
+                            <div class="member-description">Head of Security</div>
                         </div>
                     </div>
                 
