--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <!--Contains footer of page-->
     <div class="footer">
-        Copyright © The Odin Project 2023
+        Website created by Neil Casas. Characters from Vince Gilligan's Breaking Bad and Better Call Saul. All rights reserved.
     </div>
     
 </body>
