--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baby Blue Pharma</title>
+    <title>Heisenberg Pharmaceutical
+    </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,9 +15,9 @@
 
         <!--Contains header links-->
         <div class="header-links">
-            <a href="#"><div>header link one</div></a>
-            <a href="#"><div>header link two</div></a>
-            <a href="#"><div>header link three</div></a>
+            <a href="#"><div>About</div></a>
+            <a href="#"><div>Shop</div></a>
+            <a href="#"><div>Contact</div></a>
         </div>
     </div>
 
