--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!--Header of the page-->
     <div class="header">
-        Header Logo
+        <img id="header-logo" src="./pictures/logo.png" alt="logo">
 
         <!--Contains header links-->
         <div class="header-links">
