--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="intro-button" href="#">Sign up</a>
                 </div>
 
-                <img src="./pictures/logo.png" alt="company-logo">
+                <img class="intro-logo" src="./pictures/logo.png" alt="company-logo">
             </div>
 
         </div>
