Replace alt text on member images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/walter-white.png" alt="placeholder">
+                            <img src="./pictures/walter-white.png" alt="walter-white">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Walter White</div>
@@ -59,7 +59,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/jesse-pinkman.png" alt="placeholder">
+                            <img src="./pictures/jesse-pinkman.png" alt="jesse-pinkman">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Jesse Pinkman</div>
@@ -69,7 +69,7 @@
             
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/saul-goodman.webp">
+                            <img src="./pictures/saul-goodman.webp" alt="saul-goodman">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Saul Goodman, Esq.</div>
@@ -79,7 +79,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/gus-fring.webp" alt="placeholder">
+                            <img src="./pictures/gus-fring.webp" alt="gus-fring">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Gustavo Fring</div>
@@ -89,7 +89,7 @@
 
                     <div class="pic-container">
                         <div class="member-img">
-                            <img src="./pictures/mike.jpeg" alt="placeholder">
+                            <img src="./pictures/mike.jpeg" alt="mike">
                         </div>
                         <div class="member-text">
                             <div class="member-name">Mike Ehrmantraut</div>
