--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Heisenberg Pharmaceutical
     </title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./pictures/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
