Added more to intro description

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="intro-main">
                 <div class="intro-text">
                     <div class="intro">Purity. Knocking on your door.</div>
-                    <div class="intro-description">Chemistry meets compassion in our company, situated in the heart of Albuquerque, New Mexico. Our team aims to leave a lasting impact on healthcare, one blue crystal at a time.</div>
+                    <div class="intro-description">Chemistry meets compassion in our company, situated in the heart of Albuquerque, New Mexico. Join us on this transformative journey as we break barriers, challenge the status quo, and make a positive difference in the realm of healthcare. Together, we can heal lives and create a brighter, healthier future for all. Our team aims to leave a lasting impact on healthcare, one blue crystal at a time.</div>
                     <a class="intro-button" href="#">Sign up</a>
                 </div>
 
